--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MORN Coffee</title>
+    <title>GREEN spirit</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/coffee-icon.png" type="image/png">
+    <link rel="icon" href="img/plant-icon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -26,7 +26,7 @@
   </div>
   <header>
     <div class="logo">
-      <img class="animate__animated animate__fadeInDown" src="img/logo.png" alt="">
+      <img class="animate__animated animate__fadeInDown" src="img/logo-green.png" alt="">
     </div>
     <nav class="nav">
       <ul>
@@ -34,44 +34,20 @@
         <li><a href="#nav-products">PRODUCTS</a></li>
         <li><a href="#nav-contact">CONTACT</a></li>
       </ul>
-    </nav>
-    <div class="image animate__animated animate__fadeIn" ></div>
- 
+    </nav> 
   </header>
   <main>
     <div class="about">
-      <p>They say coffee was born in the highlands of Ethiopia, 
-         where a shepherd noticed his goats leaping with energy after eating 
-         some reddish berries. Since then, coffee has traveled the world, 
-         crossing oceans and cultures, becoming what it is today: a ritual, 
-         a pause, a universal language.
+      <p>Plants don’t enter a space as mere decorations — 
+        they arrive as living presence, as energy that breathes with us..
       </p><br>
-      <p>In our space, we return to that essence.
-         We seek more than just making coffee — we want to create moments.
-         Every bean we roast, every cup we serve, 
-         is crafted for you to find a moment of calm, 
-         inspiration, or connection.
+      <p>Taking care of them is an act of presence. Watering, talking, moving them when they ask for light. 
+        All of it is also a way of caring for ourselves.
       </p><br>
-      <p>Because to us, coffee is not just a drink.<br>
-          It’s memory, it’s art, it’s presence.
-      </p>
-    </div>
-    <div class="steps">
-      <div class="step1">
-        <img src="img/step1.png" alt="">
-        <p class="stepsTitle">INHALE</p>
-        <p>The aroma <br> embraces you.</p>
-      </div>
-      <div class="step2">
-        <img src="img/step2.png" alt="">
-        <p class="stepsTitle">TASTE IT</p>
-        <p> A slow sip, <br>a moment that’s yours.</p>
-      </div>
-      <div class="step3">
-        <img src="img/step3.png" alt="">
-        <p class="stepsTitle">FEEL</p>
-        <p> Calm awakens <br>with you.</p>
-      </div>
+      <p>Because every leaf holds a vibration. Every root knows how to return. And every home filled with green becomes a home filled with soul.<br><br>
+        Gift yourself a plant. It won’t just decorate your space — it will transform your energy.
+      </p> <br><br>
+      <img src="img/img-text.png" alt="">
     </div>
     <div class="divProducts" id="nav-products">
       <p class="titleProducts">PRODUCTS<p>
@@ -86,9 +62,9 @@
     
         <div class="footer-contact" id="nav-contact">
           <h4>Contact</h4>
-          <p>Email: hello@morncoffee.com</p>
-          <p>Instagram: @morn</p><br>
-          <p>&copy; 2025 Morn Coffee. All rights reserved.</p>
+          <p>Email: hello@greenspirit.com</p>
+          <p>Instagram: @greenspirit</p><br>
+          <p>&copy; 2025 Green spirit. All rights reserved.</p>
         </div>
       </div>
     </footer>
